--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -4,16 +4,14 @@
 <meta charset="utf-8" />
 <meta charset="ISO-8859-1">
 <title>Login</title>
-
 <link th:rel="stylesheet"
 	th:href="@{webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css}" />
 <link th:rel="stylesheet"
 	th:href="@{webjars/bootstrap-datetimepicker/1.7.1/css/bootstrap-datepicker.standalone.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} " />
+	th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/font-awesome/5.11.2/css/all.css} " />
-
+	th:href="@{webjars/font-awesome/5.11.2/css/all.css}" />
 </head>
 <body>
 	<div class="container">
@@ -23,56 +21,42 @@
 				<img src="images/register.jpg" class="img-fluid">
 			</div>
 			<div class="col-md-6">
-				<form th:action="@{/submit_form}" th:object="${dto}" method="post">
+				<form th:action="@{/submit_form}" th:object="${employee}" method="post">
 					<div class="form-group">
-						<label>名前</label> <input type="text" th:field="*{name}"
-							class="form-control">
+						<label>名前</label> 
+						<input type="text" th:field="*{emp_name}" class="form-control" required="required" minlength="3" maxlength="50">
 					</div>
 					<div class="form-group">
-						<label>年齢</label> <input type="text" th:field="*{age}"
-							class="form-control">
+						<label>年齢</label> 
+						<input type="text" th:field="*{emp_age}" required="required" maxlength="2" class="form-control" pattern="\d*" title="かずだけ, おねがいします。">
 					</div>
 					<div>
-						<label>部署</label> <select th:field="*{work_place}">
-							<option th:each="w : ${work_places}" th:value="${w}"
-								th:text="${w}"></option>
+						<label>部署</label> 
+						<select th:field="*{emp_workplace}">
+							<option th:each="w : ${wList}" th:value="${w}" th:text="${w}"></option>
 						</select>
 					</div>
 					<br />
 					<div>
-						<span th:each="gen: ${genders}"> <input type="radio"
-							th:field="*{gender}" th:value="${gen}" /> <label
-							th:for="${#ids.prev('gender')}" th:text="${gen}">性別</label>
+						<span th:each="gen: ${gList}"> <input type="radio" th:field="*{emp_gender}" th:value="${gen}" /> 
+							<label th:for="${#ids.prev('emp_gender')}" th:text="${gen}">性別</label>
 						</span>
 					</div>
 					<br />
-					<!-- <label for="entrydate">入社年月日</label>
-					<div class="input-group date">
-						<input type="text" class="form-control" id="entrydate"
-							autocomplete="off" th:field="*{entry_date}"/>
-						<div class="input-group-append">
-							<span class="input-group-text"><i
-								class="fa fa-calendar-alt"></i></span>
-						</div>
-					</div> -->
-					<div class="form-group">
-						<label for="entrydate">入社年月日</label> <input type="text"
-							class="demo form-control" id="entrydate" th:field="*{entry_date}" />
 
+					<div class="form-group">
+						<label for="entrydate">入社年月日</label> 
+						<input class="demo form-control" id="entrydate" th:field="*{entry_date}" />
 					</div>
 					<div class="form-group">
-						<label for="leavedate">退社年月日</label> <input type="text"
-							class="demo form-control" id="leavedate" th:field="*{leave_date}" />
-
+						<label for="leavedate">退社年月日</label> 
+						<input class="demo form-control" id="leavedate" th:field="*{leave_date}" />
 					</div>
 
-
-					<input type="submit" value="Login">
+					<input type="submit" value="入力">
 				</form>
 			</div>
 		</div>
-
-
 	</div>
 	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
@@ -87,6 +71,5 @@
 			todayHighlight : true
 		});
 	</script>
-
 </body>
 </html>
