--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -7,7 +7,7 @@
 <link th:rel="stylesheet"
 	th:href="@{webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/bootstrap-datetimepicker/1.7.1/css/bootstrap-datepicker.standalone.css}" />
+	th:href="@{webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.css}" />
 <link th:rel="stylesheet"
 	th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 <link th:rel="stylesheet"
@@ -24,33 +24,33 @@
 				<form th:action="@{/submit_form}" th:object="${employee}" method="post">
 					<div class="form-group">
 						<label>名前</label> 
-						<input type="text" th:field="*{emp_name}" class="form-control" required="required" minlength="3" maxlength="50">
+						<input type="text" th:field="*{name}" class="form-control" required="required" minlength="3" maxlength="50">
 					</div>
 					<div class="form-group">
 						<label>年齢</label> 
-						<input type="text" th:field="*{emp_age}" required="required" maxlength="2" class="form-control" pattern="\d*" title="かずだけ, おねがいします。">
+						<input type="text" th:field="*{age}" required="required" maxlength="2" class="form-control" pattern="\d*" title="かずだけ, おねがいします。">
 					</div>
 					<div>
 						<label>部署</label> 
-						<select th:field="*{emp_workplace}">
+						<select th:field="*{workplace}">
 							<option th:each="w : ${wList}" th:value="${w}" th:text="${w}"></option>
 						</select>
 					</div>
 					<br />
 					<div>
-						<span th:each="gen: ${gList}"> <input type="radio" th:field="*{emp_gender}" th:value="${gen}" /> 
-							<label th:for="${#ids.prev('emp_gender')}" th:text="${gen}">性別</label>
+						<span th:each="gen: ${gList}"> <input type="radio" th:field="*{gender}" th:value="${gen}" /> 
+							<label th:for="${#ids.prev('gender')}" th:text="${gen}">性別</label>
 						</span>
 					</div>
 					<br />
 
 					<div class="form-group">
 						<label for="entrydate">入社年月日</label> 
-						<input class="demo form-control" id="entrydate" th:field="*{entry_date}" />
+						<input class="demo form-control" id="entrydate" th:field="*{entryDate}" />
 					</div>
 					<div class="form-group">
 						<label for="leavedate">退社年月日</label> 
-						<input class="demo form-control" id="leavedate" th:field="*{leave_date}" />
+						<input class="demo form-control" id="leavedate" th:field="*{leaveDate}" />
 					</div>
 
 					<input type="submit" value="入力">
