更新と削除と検査することができました

--- a/src/main/resources/templates/confirm_page.html
+++ b/src/main/resources/templates/confirm_page.html
@@ -24,7 +24,7 @@
 					<form th:action="@{/save}" method="post">
 						<input type="hidden" th:field="*{employee.name}"> 
 						<input type="hidden" th:field="*{employee.age}"> 
-						<input type="hidden" th:field="*{employee.workplace}"> 
+						<input type="hidden" th:field="*{employee.department}"> 
 						<input type="hidden" th:field="*{employee.gender}"> 
 						<input type="hidden" th:field="*{employee.entryDate}">
 						<input type="hidden" th:field="*{employee.leaveDate}"> 
