--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,6 +10,7 @@
 	th:href="@{webjars/font-awesome/5.11.2/css/all.css}" />
 <link rel="stylesheet"
 	href="/datatable-css/dataTables.bootstrap.min.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
 	<div class="content">
@@ -25,7 +26,16 @@
 
 						</div>
 						<div class="card-body">
-							<table id="bootstrap-data-table" class="table table-striped table-bordered">
+						  <div style="float: right;">
+						     <form style='display: inline;' th:action="@{/search}" >
+                                    <input type="text" name="search_data" /> 
+									<input id="search" type="submit" value="Search"/>
+
+                                </form>
+						  </div>
+						    
+							<table id="mytable" class="table table-striped table-bordered">
+								
 								<thead>
 									<tr>
 										<th>No.</th>
@@ -35,6 +45,8 @@
 										<th>性別</th>
 										<th>入社年月日</th>
 										<th>退社年月日</th>
+										<th>更新</th>
+										<th>削除</th>
 									</tr>
 								</thead>
 
@@ -43,10 +55,12 @@
 										<th th:text="${employee.id}"></th>
 										<td th:text="${employee.name}"></td>
 										<td th:text="${employee.age}"></td>
-										<td th:text="${employee.workplace}"></td>
+										<td th:text="${employee.Department.type}"></td>
 										<td th:text="${employee.gender}"></td>
 										<td th:text="${employee.entryDate}"></td>
 										<td th:text="${employee.leaveDate}"></td>
+										<td><a class="teal-text" th:href="@{'/edit/'+${employee.id}}"><i class="fas fa-pencil-alt"></i></a></td>
+								        <td><a class="red-text" th:href="@{'/delete/'+${employee.id}}"><i class="fa fa-times"></i></a></td>
                                     </tr>
 								</tbody>
 							</table>
@@ -72,9 +86,12 @@
 	<script src="/datatable-js/datatables-init.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function() {
-          $('#bootstrap-data-table-export').DataTable();
-      } );
+    $(document).ready(function() {
+        $('#mytable').dataTable( {
+            "searching":false
+                     } );
+    } );
+       
   </script>
 </body>
 </html>
