--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -3,36 +3,46 @@
 <head>
 <meta charset="utf-8" />
 <meta charset="ISO-8859-1">
-<title>Login</title>
+<title>従業員登録</title>
 <link th:rel="stylesheet"
-	th:href="@{webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css}" />
+	th:href="@{/webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.css}" />
+	th:href="@{/webjars/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
+	th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 <link th:rel="stylesheet"
-	th:href="@{webjars/font-awesome/5.11.2/css/all.css}" />
+	th:href="@{/webjars/font-awesome/5.11.2/css/all.css}" />
 </head>
 <body>
 	<div class="container">
 		<h1 style="text-align: center; color: #b30000; font-weight: bold;">従業員登録</h1>
 		<div class="row">
 			<div class="col-md-6">
-				<img src="images/register.jpg" class="img-fluid">
+				<img src="/images/register.jpg" class="img-fluid">
 			</div>
 			<div class="col-md-6">
+			   <p style="font-weight: bold;" th:text="${update_text}"></p>
 			   <div style="text-align:right;font-weight: bold;">
 			      <a th:href="@{/employeeList}">従業員リスト</a>
 			   </div>
 			　　　
 				<form th:action="@{/submit_form}" th:object="${employee}" method="post">
+				    <div style="color: red;" th:if="${#fields.hasErrors('*')}">
+						<p>
+							<strong>Errors</strong>
+						</p>
+						<ul>
+							<li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+						</ul>
+					</div>
+					<input type="text" th:field="*{id}" hidden="hidden">
 					<div class="form-group">
 						<label>名前</label> 
-						<input type="text" th:field="*{name}" class="form-control" required="required" minlength="3" maxlength="50">
+						<input type="text" th:field="*{name}" class="form-control">
 					</div>
 					<div class="form-group">
 						<label>年齢</label> 
-						<input type="text" th:field="*{age}" required="required" maxlength="2" class="form-control" pattern="\d*" title="かずだけ, おねがいします。">
+						<input type="text" th:field="*{age}"class="form-control">
 					</div>
 					<div>
 						<label>部署</label> 
