--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta charset="ISO-8859-1">
-<title>Login</title>
+<title>従業員リスト</title>
 <link th:rel="stylesheet"
 	th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 <link th:rel="stylesheet"
@@ -23,19 +23,15 @@
 							<div style="text-align: right; font-weight: bold">
 								<a th:href="@{/back}">Back</a>
 							</div>
-
-						</div>
+                        </div>
 						<div class="card-body">
 						  <div style="float: right;">
 						     <form style='display: inline;' th:action="@{/search}" >
                                     <input type="text" name="search_data" /> 
 									<input id="search" type="submit" value="Search"/>
-
-                                </form>
+                             </form>
 						  </div>
-						    
-							<table id="mytable" class="table table-striped table-bordered">
-								
+						  <table id="mytable" class="table table-striped table-bordered">
 								<thead>
 									<tr>
 										<th>No.</th>
@@ -55,7 +51,7 @@
 										<th th:text="${employee.id}"></th>
 										<td th:text="${employee.name}"></td>
 										<td th:text="${employee.age}"></td>
-										<td th:text="${employee.Department.type}"></td>
+										<td th:text="${employee.department.type}"></td>
 										<td th:text="${employee.gender}"></td>
 										<td th:text="${employee.entryDate}"></td>
 										<td th:text="${employee.leaveDate}"></td>
